# home-hunter

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: monthly_scan.yml
config/: config.example.yaml  config.yaml
data/: listings.db  map.html
src/: config.py  db.py  main.py  map_generator.py  market_analyzer.py  models.py  security.py  user_pipeline.py
src/dedup/: deduplicator.py
src/enrichers/: commute.py  flood_zone.py  walkscore.py
src/fetchers/: base.py  realtor.py  redfin.py
src/newsletter/: generator.py  sender.py  sendgrid_sender.py
src/newsletter/templates/: newsletter.html
src/scoring/: criteria.py  engine.py
src/web/: app.py
src/web/templates/: admin_requests.html  admin_runs.html  index.html  no_map.html  user_dashboard.html
